--- a/login.html
+++ b/login.html
@@ -2,7 +2,7 @@
     <head>
         <title>Login Page</title>
     </head>
-    <body>
+    <body bgcolor="546523">
         <h3>HTML LOGIN PAGE</h3>
         <form>
             <!-- <label for="username">Username:</label><br> -->
