--- a/css/sample.html
+++ b/css/sample.html
@@ -9,12 +9,16 @@
     <!--Internal Styling-->
     <style>
         h1 {
-            color: red;
+            color: rgba(255, 0, 0,1);
+        }
+        p {
+          color: hsla(205, 75%, 50%,1);
         }
     </style>
   </head>
   <body>
     <!--Inline Styling-->
     <h1 style="text-align: center;">Hello World</h1>
+    <p>This is CSS class</p>
   </body>
 </html>
